[FIX] 내 답변이 없을경우 500에러가 나는 문제 해결
- 내 답변이 없는경우, 좋아요수 구하는 쿼리 실행하지 않음
- 내 답변이 있는 경우에만 questionDetailRes에 myAnswer값 기입